Updated post/user controller's methods
